--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 #------------------------------------------------------------
 # Values for this lesson.
 #------------------------------------------------------------
-
+# markdown: redcarpet-pygments
+  
 # Which carpentry is this ("swc", "dc", "lc", or "cp")?
 # swc: Software Carpentry
 # dc: Data Carpentry
@@ -26,7 +27,7 @@ kind: "lesson"
 repository: <USERNAME>/<PROJECT>
 
 # Email address, no mailto:
-email: "team@carpentries.org"
+email: "gaurav.gupta@mq.edu.au"
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
@@ -85,6 +86,6 @@ exclude:
   - Makefile
   - bin/
   - .Rproj.user/
-
+  
 # Turn on built-in syntax highlighting.
 highlighter: rouge
