--- a/_data/test.yml
+++ b/_data/test.yml
@@ -7,12 +7,12 @@ navigation_list:
     link: 01-welcome-to-the-unit
   - title: Pen and Paper methodology
     link: 02-pen-and-paper-methodology
-  - title: Compiling and running java programs
+  - title: Compiling Executing Java Programs
     link: 03-compiling-executing-java-programs
-  - title: History of Java
-    link: 04-history-of-java
-  - title: Software to install and first program
+  - title: Java
+    link: 04-java
+  - title: Software To Install
     link: 05-software-to-install
-  - title: COMP115 recap
+  - title: Revision
     link: 06-revision
 ---
