more comments on the script that creates the navigation list yml file

--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ exclude:
   - Makefile
   - bin/
   - .Rproj.user/
+  - makeNavigationList.py
   
 # Turn on built-in syntax highlighting.
 highlighter: rouge
