commented out overview and keypoints sections, updated lecture 2 chapter 1, added lecture 2 chapter 2

--- a/_data/navigation-list.yml
+++ b/_data/navigation-list.yml
@@ -18,6 +18,8 @@ navigation_list:
 - id: 02-classes_and_objects_1
   title: Classes And Objects 1
   links:
-  - title: Introduction
+  - title: Introduction to Object-Oriented Programming
     link: 01-brief-introduction-to-object-oriented-programming.html
+  - title: UML Diagrams
+    link: 02-uml-diagrams.html
 ---
