--- a/_data/navigation-list.yml
+++ b/_data/navigation-list.yml
@@ -1,7 +1,7 @@
 ---
 navigation_list:
 - id: 01-introduction
-  title: Week 1 - Introduction
+  title: Introduction
   links:
   - title: Welcome to the unit
     link: 01-welcome-to-the-unit.html
@@ -15,8 +15,10 @@ navigation_list:
     link: 05-software-to-install.html
   - title: Some problem solving to revise COMP115/WCOM115
     link: 06-revision.html
+  - title: All in one
+    link: 99-aio.html
 - id: 02-static-debugging-unit-testing
-  title: Week 2 - Static Debugging Unit Testing
+  title: Static Debugging Unit Testing
   links:
   - title: What is static?
     link: 01-static.html
@@ -24,8 +26,10 @@ navigation_list:
     link: 02-debugging.html
   - title: Unit Testing and JUnit
     link: 03-unit-testing-junit.html
+  - title: All in one
+    link: 99-aio.html
 - id: 03-classes-and-objects
-  title: Weeks 3, 4 - Classes And Objects
+  title: Classes And Objects
   links:
   - title: Introduction to Object-Oriented Programming
     link: 01-object-oriented-programming.html
@@ -45,8 +49,10 @@ navigation_list:
     link: 08-class-containing-array.html
   - title: Array of objects
     link: 09-array-of-objects.html
+  - title: All in one
+    link: 99-aio.html
 - id: 04-searching-and-sorting
-  title: Weeks 5, 6 - Searching And Sorting
+  title: Searching And Sorting
   links:
   - title: Motivation for searching and sorting algorithms
     link: 01-motivation-for-searching-sorting-algorithms.html
@@ -58,8 +64,10 @@ navigation_list:
     link: 04-binary-search.html
   - title: Searching and sorting an array of objects
     link: 05-searching-and-sorting-on-array-of-objects.html
+  - title: All in one
+    link: 99-aio.html
 - id: 05-recursion
-  title: Week 7 - Recursion
+  title: Recursion
   links:
   - title: What is recursion?
     link: 01-what-is-recursion.html
@@ -75,4 +83,6 @@ navigation_list:
     link: 06-first-look-at-a-recursive-solution.html
   - title: A better example
     link: 07-a-better-example.html
+  - title: All in one
+    link: 99-aio.html
 ---
