--- a/_data/navigation-list.yml
+++ b/_data/navigation-list.yml
@@ -83,32 +83,31 @@ navigation_list:
     link: 06-first-look-at-a-recursive-solution.html
   - title: A better example
     link: 07-a-better-example.html
-<<<<<<< HEAD
+  - title: All in one
+    link: 99-aio.html
 - id: 06-lists
   title: Lists
   links:
   - title: What are lists?
     link: 01-what-are-lists.html
-  - title: What are arrays not good enough?
+  - title: Why are arrays not good enough?
     link: 02-why-are-arrays-not-good-enough.html
-  - title: Built-in lists in Java
+  - title: Built in lists in Java
     link: 03-built-in-lists-in-java.html
   - title: Enhanced for loop
     link: 04-enhanced-for-loop.html
+  - title: Iterator
+    link: 05-iterator.html
   - title: Custom built arraylist
-    link: 05-custom-built-arraylist.html
+    link: 06-custom-built-arraylist.html
   - title: Object holding another reference
-    link: 06-object-holding-another-reference.html
+    link: 07-object-holding-another-reference.html
   - title: The node class
-    link: 07-the-node-class.html
+    link: 08-the-node-class.html
   - title: Custom built linkedlist
-    link: 08-custom-built-linkedlist.html
+    link: 09-custom-built-linkedlist.html
   - title: Traversing custom built linkedlist
-    link: 09-traversing-custom-built-linkedlist.html
+    link: 10-traversing-custom-built-linkedlist.html
   - title: More advanced methods in custom linkedlist
-    link: 10-more-advanced-methods-in-custom-linkedlist.html
-=======
-  - title: All in one
-    link: 99-aio.html
->>>>>>> 28a23d19b8102cdb578bf5e981b1335cf14d33ae
+    link: 11-more-advanced-methods-in-custom-linkedlist.html
 ---
