--- a/_config.yml
+++ b/_config.yml
@@ -150,6 +150,8 @@ exclude:
   - portingToMarkdown/
   - workshops/
   - archive/
+  - workHours.csv
+  - imageMagick.md
 # !github-pages! mandatory › https://help.github.com/articles/using-jekyll-with-pages/#configuration-settings-you-cannot-change
 # Since Jekyll 3 the default highlighter is Rouge (replaced Pygments.rb in v44)
 # Turn on built-in syntax highlighting.
